# spotifyintegration

./: .gitignore  README.md  pyproject.toml
backend/: app.py  myapi.py  schemas.py  security.py  settings.py
backend/requests/: auth.py  features.py  playlist.py  search.py
backend/routers/: auth.py  features.py  playlist.py  search.py
backend/utils/: saveexcel.py
